--- a/src/components/AuthPage/style.module.sass
+++ b/src/components/AuthPage/style.module.sass
@@ -2,12 +2,12 @@
   display: flex
   justify-content: center
   align-items: center
-  height: 100vh
+  height: 100%
 
 .myTradesContent
   width: 330px
   margin: auto
-  height: 220px
+  max-height: 320px
   padding: 1.25rem
   display: flex
   flex-direction: column
