--- a/src/components/Form/style.module.sass
+++ b/src/components/Form/style.module.sass
@@ -1,55 +1,9 @@
-// .form
-//   display: flex
-//   flex-direction: column
-//   align-items: center
-//   justify-content: center
-//   gap: 1.25rem
-//   max-width: 28.125rem
-//   margin: auto
-//   padding: 1.5625rem
-//   &__input
-//     width: 100%
-//     border: none
-//     outline: none
-//     color: #000
-//     border: 1px solid #ccc
-//     border-radius: .75rem
-//     padding: 12px
-//   &__btn
-//     border: none
-//     padding: .75rem 1.5625rem
-//     background: #4780e9
-//     border: 1px solid #4780e9
-//     color: #fff
-//     transition: .5s all
-//     cursor: pointer
-//     border-radius: .4375rem
-//     &:hover
-//       background: none
-//       color: #4780e9
-//   &__err
-//     position: absolute
-//     background: tomato
-//     overflow: hidden
-//     color: #fff
-//     padding: 1.5625rem
-//     right: 0
-//     left: 0
-//     top: -125rem
-//     width: max-content
-//     border-radius: .75rem
-//     margin: auto
-//     transition: .5s all
-
-// .active
-//   top: 13.75rem
-
 .loginContainer
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-  height: 100vh
+  height: 100%
   h3
     margin-bottom: 20px
 
