--- a/src/components/MyDeals/style.module.sass
+++ b/src/components/MyDeals/style.module.sass
@@ -1,7 +1,7 @@
 .deals
   width: 20rem
   margin: auto
-  height: 100%
+  height: 100vh
   display: flex
   align-items: center
   flex-direction: column
@@ -10,7 +10,15 @@
   gap: 1.25rem
   border-radius: .75rem
   align-items: flex-start
-  justify-content: space-between
+  &__cards
+    height: 350px
+    display: flex
+    gap: 1.25rem
+    align-items: center
+    justify-content: space-between
+    flex-direction: column
+    width: 100%
+    overflow-y: scroll
   &__list
     display: flex
     align-items: center
